--- a/package.json
+++ b/package.json
@@ -7,14 +7,27 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsnd --respawn --transpile-only --exit-child src/index.ts",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.build.json",
+    "test": "jest",
+    "test:dev": "jest --watch"
   },
   "dependencies": {
+    "dotenv": "^16.4.1",
     "fastify": "^4.26.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
+    "@types/jest": "^29.5.12",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ts-jest": "^29.1.2",
+    "jest": "^29.7.0"
+  },
+  "jest": {
+    "verbose": true,
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testRegex": "src/*/.*\\.test\\.ts$",
+    "moduleDirectories": ["node_modules", "src"]
   }
 }
