--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "CommonJS",
+    "baseUrl": "src",
     "outDir": "dist",
+    "sourceMap": true,
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  },
-  "exclude": ["src/test"]
+  }
 }
