--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "gustavomoser <gustavovbmoser@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --respawn --transpile-only --exit-child src/index.ts",
     "build": "tsc -p tsconfig.build.json",
+    "start:dev": "tsnd --respawn --transpile-only --exit-child src/server.ts",
     "test": "jest",
     "test:dev": "jest --watch"
   },
@@ -16,18 +16,21 @@
     "fastify": "^4.26.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
     "@types/jest": "^29.5.12",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3",
+    "@types/node": "^20.11.16",
+    "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "jest": "^29.7.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   },
   "jest": {
     "verbose": true,
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testRegex": "src/*/.*\\.test\\.ts$",
-    "moduleDirectories": ["node_modules", "src"]
+    "testRegex": "src/test/.*\\.test\\.ts$",
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
   }
 }
