--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "CommonJS",
-    "baseUrl": "src",
-    "outDir": "dist",
+    "baseUrl": "./src",
+    "outDir": "./dist",
     "sourceMap": true,
     "esModuleInterop": true,
     "strict": true,
