--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -p tsconfig.build.json",
     "start:dev": "tsnd --respawn --transpile-only --exit-child src/server.ts",
     "test": "jest",
-    "test:dev": "jest --watch"
+    "test:dev": "jest --watch",
+    "deploy": "flyclt deploy --remote-only"
   },
   "dependencies": {
     "dotenv": "^16.4.1",
